; ModuleID = '/home/carl/AnghaBench/postgres/src/port/extr_pgsleep.c_pg_usleep.c'
source_filename = "/home/carl/AnghaBench/postgres/src/port/extr_pgsleep.c_pg_usleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pg_usleep(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.timeval, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = icmp sgt i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = sdiv i64 %7, 1000000
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  store i64 %8, i64* %9, align 8
  %10 = load i64, i64* %2, align 8
  %11 = srem i64 %10, 1000000
  %12 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 1
  store i64 %11, i64* %12, align 8
  %13 = call i32 @select(i32 0, i32* null, i32* null, i32* null, %struct.timeval* %3)
  br label %14

14:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
